# Adaption

./: .env.example  .gitignore  main.py  pyproject.toml
Indian Climate data/: .env.example  .gitignore  README.md  pyproject.toml
Indian Climate data/docs/: scam_taxonomy.md
Indian Climate data/reports/: day2_failure_modes.md  day2_source_gaps.md  day2_stats.txt  day3_findings.md
Indian Climate data/scripts/: _paths.py  adapt_seeds.py  audit_day4.py  balance_formats.py  build_seed.py  build_seed_v2.py  build_seed_v3.py  build_train_val.py  enrich_hindi_helplines.py  freeze_test_split.py  generate_scam_pairs.py  ingest_eyescan_results.py  inject_advanced_seeds.py  link_parallel_pairs.py  prepare_day3_seeds.py  prepare_eyescan_batch.py  prepare_test_split_eyescan.py  scrape_all.py  stats.py  validate_corpus.py
Indian Climate data/src/bharat_cric/: __init__.py  cli.py  helpline_registry.py  instruction_builder.py  multilingual_builder.py  schema.py  validators.py
Indian Climate data/src/bharat_cric/adversarial/: pair_generator.py
Indian Climate data/src/bharat_cric/sources/: __init__.py  _http.py  bhojpuri_authentic.py  imd.py  imd_hindi.py  maithili_authentic.py  ndma.py  ndma_hindi.py  pib.py  santali_authentic.py  sdma.py
Indian Climate data/tests/: conftest.py  test_helpline_registry.py  test_multilingual_validators.py  test_schema.py  test_validators.py
cyber/: README.md  adaption_recipes.md  adaption_smoke_test_log.md  coverage_audit.md  dataset_v0.csv  day2_status.md  encoding_sanity_check.md  generate_scale_dataset.py  genuine_anchors.csv  marathi_register_notes.md  pattern_audit.md  pattern_library.csv  pilot_review.md  pilot_v2_diff.md  poll_smoke_test.py  run_smoke_test.py  scaling_audit.md  (+4 more)
(+8 files in other folders)
