[project]
name = "bharat-cric"
version = "0.1.0"
description = "Bharat Climate Resilience Instruction Corpus - multilingual heatwave preparedness instruction dataset for the Adaption Uncharted Data Challenge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pdfplumber>=0.11",
    "polars>=1.0",
    "datasets>=2.20",
    "huggingface-hub>=0.24",
    "langdetect>=1.0",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "adaption>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
bharat-cric-seed = "bharat_cric.cli:build_seed"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bharat_cric*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
